# Crypto_Bot

./: .env.example  .flake8  .gitignore  .report.json  README.md  ROADMAP.md  cdp_sdk_reference.md  coinbase_client.py  config.py  logger.py  main.py  mypy.ini  original_article.md  persistence.py  pyproject.toml  pytest_results.txt  report.json  requirements.txt  technical_analysis.py  test_connection.py  trade_manager_report.json  trading_logic.py  v6_plan.md
src/trading/: coinbase_client.py  decorators.py  logger.py  order_calculator.py  persistence.py  signal_analyzer.py  technical_analysis.py  trade_manager.py
tests/: __init__.py  conftest.py  test_coinbase_client.py  test_coinbase_client_cancel_orders.py  test_config.py  test_connection.py  test_integration_coinbase_client.py  test_logger.py  test_main.py  test_order_calculator.py  test_persistence.py  test_signal_analyzer.py  test_technical_analysis.py  test_trade_manager.py  test_trading_logic.py  test_trading_logic_process.py
trading/: coinbase_client.py  config.py  main.py  order_calculator.py  persistence.py  signal_analyzer.py  technical_analysis.py  trade_manager.py
